<resources>
    <string name="app_name">SoundVault</string>

    <string name="upload_file_filename_placeholder">Choose file to upload</string>
    <string name="description_placeholder">Description</string>
    <string name="upload_button">Upload</string>
    <string name="home_button">Home</string>
    <string name="search_button">Search</string>
    <string name="my_library_button">My library</string>
    <string name="free_for_all_rbutton">Free for all</string>
    <string name="subscription_rbutton">Part of global subscription</string>
    <string name="sign_out_option">Sign out</string>
    <string name="search_option">Search</string>
    <string name="start_your_journey">Where your journey starts</string>
    <string name="greetings">Greetings</string>
    <string name="tracks_label">Tracks</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="authored_label">Authored</string>
    <string name="back_button">Back</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>
    <string name="profile_option">Profile</string>
    <string name="track_details_option">Track details</string>
    <string name="parkin_link">Parkin Link</string>
    <string name="kings_and_wretches">Kings and Wretches</string>
    <string name="share_button">Share</string>
    <string name="likes_label">Likes</string>
    <string name="plays_label">Plays</string>
    <string name="set_author_s_name">Set author\'s name</string>
    <string name="switch_single_label">Single</string>
    <string name="switch_album_part">Part of an album</string>
    <string name="switch_playlist_part">Part of a playlist</string>
    <string name="one_time_purchase_rbutton">One time purchase</string>
    <string name="single_price_label">Single price</string>
    <string name="choose_distribution_plan_label">Choose distribution plan:</string>
    <string name="add_genres_label">Add some genres</string>
    <string name="track_viewholder_title">%1$s - %2$s</string>
    <string name="time_mm_ss_format">%1$d:%2$s</string>
</resources>