<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_distribution_plan_label"
        style="@style/subchapterHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_distribution_plan_label"
        app:layout_constraintStart_toStartOf="@id/rg_distribution_plan"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_distribution_plan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_distribution_plan_label">

        <RadioButton
            android:id="@+id/rb_free_for_all"
            style="@style/themedRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_for_all_rbutton" />

        <RadioButton
            android:id="@+id/rb_subscription"
            style="@style/themedRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription_rbutton" />

        <RadioButton
            android:id="@+id/rb_one_time_purchase"
            style="@style/themedRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_purchase_rbutton" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/switches_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/rg_distribution_plan"
        app:layout_constraintStart_toStartOf="@id/rg_distribution_plan"
        app:layout_constraintTop_toBottomOf="@id/rg_distribution_plan">

        <ImageView
            android:id="@+id/iv_switch_group_divider"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:src="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_single"
            style="@style/themedSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_switch_group_divider" />

        <TextView
            android:id="@+id/tv_single_switch_label"
            style="@style/generalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_single_label"
            app:layout_constraintBottom_toBottomOf="@id/switch_single"
            app:layout_constraintStart_toEndOf="@id/switch_single"
            app:layout_constraintTop_toTopOf="@id/switch_single" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_album_part"
            style="@style/themedSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/switch_single"
            app:layout_constraintTop_toBottomOf="@id/switch_single" />

        <TextView
            android:id="@+id/tv_album_part_switch_label"
            style="@style/generalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_album_part"
            app:layout_constraintBottom_toBottomOf="@id/switch_album_part"
            app:layout_constraintStart_toEndOf="@id/switch_album_part"
            app:layout_constraintTop_toTopOf="@id/switch_album_part" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_playlist_part"
            style="@style/themedSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/switch_album_part"
            app:layout_constraintTop_toBottomOf="@id/switch_album_part" />

        <TextView
            android:id="@+id/tv_playlist_part_switch_label"
            style="@style/generalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_playlist_part"
            app:layout_constraintBottom_toBottomOf="@id/switch_playlist_part"
            app:layout_constraintStart_toEndOf="@id/switch_playlist_part"
            app:layout_constraintTop_toTopOf="@id/switch_playlist_part" />

        <EditText
            android:id="@+id/et_single_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_single_price_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_single_price_label"
            app:layout_constraintTop_toBottomOf="@id/iv_switch_group_divider" />

        <TextView
            android:id="@+id/tv_single_price_label"
            style="@style/generalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_price_label"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/switch_playlist_part"
            app:layout_constraintEnd_toEndOf="@id/et_single_price"
            app:layout_constraintTop_toBottomOf="@id/et_single_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>