<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewmodel"
            type="com.dsphoenix.soundvault.ui.uploadscreen.UploadFileViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/btn_pick_file"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:icon="@drawable/ic_menu_archive"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:onClick="@{()->viewmodel.onOpenFileButtonClick()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/et_file_name"
            />

        <EditText
            android:id="@+id/et_file_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@={viewmodel.filename}"
            android:hint="@string/upload_file_filename_placeholder"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toEndOf="@id/btn_pick_file"
            app:layout_constraintTop_toTopOf="@id/btn_pick_file"
            app:layout_constraintBottom_toBottomOf="@id/btn_pick_file"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/et_file_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.description}"
            android:hint="@string/description_placeholder"
            app:layout_constraintTop_toBottomOf="@id/btn_pick_file"
            app:layout_constraintStart_toStartOf="@id/btn_pick_file"
            app:layout_constraintEnd_toEndOf="@id/et_file_name"
            />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/upload_button"
            android:enabled="@{viewmodel.isValid()}"
            android:onClick="@{()->viewmodel.uploadButtonClick()}"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/et_file_description"
            app:layout_constraintEnd_toEndOf="@id/et_file_description"
            app:layout_constraintTop_toBottomOf="@id/et_file_description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>