<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    >


    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/back_button"
        app:drawableStartCompat="@drawable/ic_back"
        android:drawablePadding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/edit_button"
        app:drawableEndCompat="@drawable/ic_edit"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_track_cover"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:shapeAppearance="@style/CircleImage"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/hemsworth_icon"
        />

    <TextView
        android:id="@+id/tv_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/iv_track_cover"
        app:layout_constraintStart_toStartOf="@id/iv_track_cover"
        app:layout_constraintEnd_toEndOf="@id/iv_track_cover"
        android:layout_marginTop="10dp"
        android:text="Hem Chrisworth"
        />

    <TextView
        android:id="@+id/tv_tracks_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracks_label"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/light_gray"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/tv_track_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_followers_label"
        />

    <TextView
        android:id="@+id/tv_tracks_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="13"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_tracks_label"
        app:layout_constraintStart_toStartOf="@id/tv_tracks_label"
        app:layout_constraintEnd_toEndOf="@id/tv_tracks_label"
        />

    <TextView
        android:id="@+id/tv_followers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers_label"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toTopOf="@id/tv_tracks_label"
        app:layout_constraintStart_toEndOf="@id/tv_tracks_label"
        app:layout_constraintEnd_toStartOf="@id/tv_plays_label"
        />

    <TextView
        android:id="@+id/tv_followers_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="330"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_followers_label"
        app:layout_constraintStart_toStartOf="@id/tv_followers_label"
        app:layout_constraintEnd_toEndOf="@id/tv_followers_label"
        />

    <TextView
        android:id="@+id/tv_plays_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following_label"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/light_gray"
        app:layout_constraintTop_toTopOf="@id/tv_followers_label"
        app:layout_constraintStart_toEndOf="@id/tv_followers_label"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_listens_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="44"
        app:layout_constraintTop_toBottomOf="@id/tv_plays_label"
        app:layout_constraintStart_toStartOf="@id/tv_plays_label"
        app:layout_constraintEnd_toEndOf="@id/tv_plays_label"
        />

    <ImageView
        android:id="@+id/iv_stats_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_followers_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_authored_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authored_label"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/light_gray"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_followers_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/iv_authored_divider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/divider"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_authored_label"
        app:layout_constraintStart_toStartOf="@id/tv_authored_label"
        app:layout_constraintEnd_toEndOf="@id/tv_authored_label"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_authored_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/vh_track"
        />



</androidx.constraintlayout.widget.ConstraintLayout>